Move Java code from javax to jakarta
1. Migrates imports from javax.* to jakarta.*
2. Moves some files in presto-main-base to presto-main that depend on
   jakarta.ws.rs because the version of jakarta.ws.rs that we now use
   requires java 17 bytecode.